--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@ server {
     server_name localhost;
 
     location / {
-        proxy_pass http://127.0.0.1:8000/;  # Replace with the address your Django app is running on
+        proxy_pass http://127.0.0.1:8000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
